# ArchiEngine

./: CMakeLists.txt
assets/cache/: 1b97a83c7f07ebdd.meshbin  2b1d2912ebce373c.texbin  32440adad9b9970b.texbin  4ce1ea1751281ba3.meshbin  60ed35cc9abe7bbe.meshbin  718f06f2ddc373f5.meshbin  759b183381ca33cb.meshbin  a5b5217053830f9d.texbin  b9a9ec4a3258944.meshbin  ce139b93d5d737cc.meshbin
assets/materials/: ball_metal.material.json  blue_metal.material.json  build_material.json  checker.material.json  ground_brick.material.json  rusty_metal.material.json  sapeli_wood.material.json  tree_material.json
assets/scenes/: .editor_play_snapshot.json  demo_scene.json  physics_demo_scene.json
assets/scenes/.editor_history/: redo_00000004.json  redo_00000015.json  redo_00000016.json  redo_00000017.json  redo_00000096.json  undo_00000006.json  undo_00000007.json  undo_00000008.json  undo_00000009.json  undo_00000010.json  undo_00000011.json  undo_00000015.json  undo_00000016.json  undo_00000017.json  undo_00000018.json  undo_00000021.json  undo_00000022.json  undo_00000023.json  undo_00000024.json  undo_00000026.json  undo_00000027.json  undo_00000028.json  undo_00000029.json  undo_00000030.json  undo_00000031.json  undo_00000032.json  undo_00000033.json  undo_00000034.json  undo_00000035.json  undo_00000037.json  undo_00000038.json  undo_00000039.json  undo_00000040.json  undo_00000042.json  undo_00000043.json  undo_00000045.json  undo_00000046.json  undo_00000047.json  undo_00000048.json  undo_00000049.json  (+31 more)
assets/shaders/: test.frag  test.vert  textured.frag  textured.shader.json  textured.vert
assets/textures/: checker.ppm
src/: Application.cpp  Application.h  AssetPaths.cpp  AssetPaths.h  DeltaTimer.h  ECS.h  ECSComponents.h  ECSSystems.cpp  ECSSystems.h  EditorLayer.cpp  EditorLayer.h  EventBus.h  GameState.h  GameStateMachine.cpp  GameStateMachine.h  InputManager.h  Logger.cpp  Logger.h  Math2D.h  MiniJson.cpp  MiniJson.h  OpenGLRenderAdapter.cpp  OpenGLRenderAdapter.h  RenderAdapter.h  ResourceManager.cpp  ResourceManager.h  Resources.h  SceneSerializer.cpp  SceneSerializer.h  SpatialGrid.cpp  SpatialGrid.h  States.cpp  States.h  main.cpp
tools/: OpenLogWindows.ps1
